feat: create new endpoint
